[project]
name = "MediaMiner"
version = "0.1.0"
description = "新闻获取，汇总，AI"
authors = [
    {name = "AiNexusHub"},
]
dependencies = []
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
